# jib

./: CMakeLists.txt  README.md  jib.desktop
debian/: changelog  control  jib.postinst  jib.prerm  rules
src/: CMakeLists.txt  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  assets.qrc  bookmarkmodel.cpp  bookmarkmodel.h  ctx.cpp  ctx.h  historymodel.cpp  historymodel.h  historywidget.cpp  historywidget.h  historywidget.ui  launchitemwidget.cpp  launchitemwidget.h  launchitemwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  popularitymodel.cpp  popularitymodel.h  settingswidget.cpp  settingswidget.h  settingswidget.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  suggestionmodel.cpp  suggestionmodel.h  webwidget.cpp  webwidget.h  webwidget.ui  windowmanager.cpp  windowmanager.h
src/assets/: splash.html
src/assets/adblock/rules/: filters.txt  update.sh
src/lib/: FastHash.cpp  QClickFrame.h  QClickTableView.h  QLineEditFocus.cpp  QLineEditFocus.h  RequestInterceptor.cpp  RequestInterceptor.h  URL.cpp  config.cpp  config.h  utils.cpp  utils.h
src/lib/adblock/: AdBlockFilter.cpp  AdBlockFilter.h  AdBlockFilterContainer.cpp  AdBlockFilterParser.cpp  AdBlockManager.cpp  AdBlockManager.h  AdBlockRequestHandler.cpp  AdBlockSubscription.h
src/lib/public_suffix/: PublicSuffixManager.cpp  PublicSuffixManager.h  PublicSuffixRuleParser.cpp  PublicSuffixRuleParser.h  PublicSuffixTree.cpp  PublicSuffixTree.h  PublicSuffixTreeNode.cpp  PublicSuffixTreeNode.h
